--- a/about/aboutindex.html
+++ b/about/aboutindex.html
@@ -11,15 +11,15 @@
     <header>
         <nav>
             <div class="logo">
-                <a href="#">Portfolio.</a>
+                <a href="#">Open voice.</a>
             </div>
         
            
             <ul>
-                <li><a href="/index.html" class="active">Home</a></li>
-                <li><a href="/tasks/index.html">Tasks Page</a></li>
-                <li><a href="aboutindex.html">About</a></li>
-                <li><a href="/contact/indexcontac.html">Contact</a></li>
+                <li><a href="../index.html" class="nav-link">Home</a></li>
+                <li><a href="../tasks/index.html" class="nav-link">Tasks Page</a></li>
+                <li><a href="aboutindex.html" class="nav-link active">About</a></li>
+                <li><a href="../contact/indexcontac.html" class="nav-link">Contact</a></li>
             </ul>
         </nav>
     </header>
