--- a/contact/indexcontac.html
+++ b/contact/indexcontac.html
@@ -10,17 +10,17 @@
     <header>
         <nav>
             <div class="logo">
-                <a href="#">Portfolio.</a>
+                <a href="#">Open voice.</a>
             </div>
                 <div class="menu">
                     <i class="bi bi-list"></i>
                 </div>
             </label>
             <ul>
-                <li><a href="/index.html" class="active">Home</a></li>
-                <li><a href="/tasks/index.html">Tasks Page</a></li>
-                <li><a href="/about/aboutindex.html">About</a></li>
-                <li><a href="indexcontac.html">Contact</a></li>
+                <li><a href="../index.html" class="nav-link">Home</a></li>
+                <li><a href="../tasks/index.html" class="nav-link">Tasks Page</a></li>
+                <li><a href="../about/aboutindex.html" class="nav-link">About</a></li>
+                <li><a href="indexcontac.html" class="nav-link active">Contact</a></li>
             </ul>
         </nav>
     </header>
